Fix Bug 646 -  RowRenderer header fields for right-aligned columns should be right-aligned too Added new property for header CSS class to column definition, and set that one to ui-numeric for numeric colums. Together with a css change this will align numeric column headers to the right.

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -515,7 +515,7 @@ table.ui-lui-selected {
 
 /*** Typed presentation for fields containing numerics ***/
 .ui-numeric {
-	text-align: right;
+	text-align: right !important;
 }
 
 /* Display-only field */
